# sec_reports

./: .gitignore  Makefile  README.md  pyproject.toml
src/sec_reports/: cli.py  converter.py  html.py  models.py  pipeline.py  ports.py
src/sec_reports/tests/: test_service.py
