[project]
name = "sec-reports"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hesam Pakdaman", email = "hesam.pakdaman@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.2",
    "aiolimiter>=1.2.1",
    "bs4>=0.0.2",
    "pdfkit>=1.0.0",
]

[project.scripts]
sec-reports = "sec_reports.cli:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.3",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ARG", "B", "E", "F", "I"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
